--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <title>Revista Yeison</title>
     <meta name="description" content="Revista con efecto de pasar página y descarga" />
 
-    <!-- PageFlip (efecto flipbook) -->
+    <!-- Favicon para evitar 404 en consola -->
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+
+    <!-- PageFlip (CSS) desde jsDelivr -->
     <link
       rel="stylesheet"
-      href="https://unpkg.com/page-flip@2.4.1/dist/css/page-flip.css"
+      href="https://cdn.jsdelivr.net/npm/page-flip@2.4.1/dist/css/page-flip.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
 
     <link rel="stylesheet" href="./styles.css" />
@@ -42,9 +47,22 @@
 
     <!-- PDF.js -->
     <script src="https://unpkg.com/pdfjs-dist@3.11.174/build/pdf.min.js"></script>
-    <!-- PageFlip (UMD) -->
-    <script src="https://unpkg.com/page-flip@2.4.1/dist/js/page-flip.browser.min.js"></script>
 
+    <!-- PageFlip (UMD) desde jsDelivr -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/page-flip@2.4.1/dist/js/page-flip.browser.min.js"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <!-- Fallback opcional a unpkg si el CDN principal falla -->
+    <script>
+      if (!(window.St && window.St.PageFlip)) {
+        document.write('<script src="https://unpkg.com/page-flip@2.4.1/dist/js/page-flip.browser.min.js"><\\/script>');
+      }
+    </script>
+
+    <!-- Tu script -->
     <script src="./script.js"></script>
   </body>
 </html>
