--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </footer>
     </main>
 
-    <!-- PDF.js (solo el visor; el worker lo apunta script.js) -->
+    <!-- PDF.js (visor); el worker lo configura script.js -->
     <script src="https://unpkg.com/pdfjs-dist@3.11.174/build/pdf.min.js"></script>
     <script src="./script.js"></script>
   </body>
