--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main class="container">
       <header class="header">
-        <h1>Revista Yeison</h1>
+        <h1>Revista</h1>
         <a id="download" class="btn" href="magazine.pdf" download>Descargar PDF</a>
       </header>
 
